k8s/webapp/deployment-nodeselector.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: webapp
  namespace: webapp
  labels:
    app: webapp

spec:
  replicas: 2

  selector:
    matchLabels:
      app: webapp

  template:
    metadata:
      labels:
        app: webapp

    spec:
      nodeSelector:
        tier: frontend

      tolerations:
        - key: dedicated
          operator: Equal
          value: frontend
          effect: NoSchedule

      containers:
        - name: webapp
          image: nginx:1.27-alpine

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
