k8s/webapp/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: webapp
  namespace: webapp
  labels:
    app: webapp

spec:
  type: ClusterIP

  selector:
    app: webapp

  ports:
    - port: 80
      targetPort: 8080
