k8s/webapp/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: webapp-allow-internal
  namespace: webapp

spec:
  podSelector:
    matchLabels:
      app: webapp

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector: {}

      ports:
        - protocol: TCP
          port: 8080
